--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "yarn install",
     "watchts": "tsc -w",
     "test": "ava --watch --verbose",
-    "test_no_timeout": "ava --watch --verbose --serial --timeout=60m",
+    "test_serial": "ava --watch --verbose --serial --timeout=60m",
     "buildpeg": "pegjs -o src/parser/parser.js src/parser/grammar.pegjs",
     "watchpeg": "nodemon --watch src/parser -e pegjs -x yarn buildpeg",
     "watch": "node watch.js"
