--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "compilerOptions": {
         "target": "ES2019",
         "module": "commonjs",
-        // "declaration": true,
+        "declaration": true,
         "outDir": "lib",
         "rootDir": "src",
         "strict": true,
